# CGSim

./: .gitignore
LLM-Interface/: Makefile  README.md  TODO.md  datagen_local.py  datagen_run.sh  datagen_run_ollama.sh  datagen_submit.py  merge.py
LLM-Interface/clients/: CGSimDataGenerator.py  ScenarioConfigGenerator.py
LLM-Interface/data/: askpanda_sft_cgsim_v1_20260602.jsonl
LLM-Interface/data/grpo/: grpo_base_degraded_20260614_190531.jsonl  grpo_baseline_20260614_190408.jsonl  grpo_frdf_offline_20260614_190531.jsonl  grpo_high_coadd_burst_20260614_190532.jsonl  grpo_high_load_20260614_190532.jsonl  grpo_summit_link_bottleneck_20260614_190531.jsonl  grpo_transatlantic_congested_20260614_190532.jsonl  grpo_usdf_degraded_20260614_190531.jsonl  grpo_usdf_storage_throttled_20260614_190531.jsonl
LLM-Interface/docs/: askpanda_cgsim_training_pipeline_summary.md  askpanda_sft_cgsim_v4_20260603_summary.md
LLM-Interface/scripts/: compare_runs.py  ollama_server.sbatch
cmake/: CGSimConfig.cmake.in
config-files/: mini_config_perlmutter.json  toy_config_perlmutter.json
dispatch_plugins/simple-test-plugin/: CMakeLists.txt
dispatch_plugins/simple-test-plugin/src/: workload_manager.cpp
rubin-data/: .gitignore  generate.py  jobs.csv  rubin_config.json  rubin_config_perlmutter.json  site_conn_info.json  site_info.json
src/: main.cpp
toy_data/: mini_site_info.json
util/: file_manager.cpp
